fixed visibility issues

--- a/front-end/src/containers/Forms/AddEventForm.css
+++ b/front-end/src/containers/Forms/AddEventForm.css
@@ -159,7 +159,7 @@
     }
 
     #AddNewEventText {
-        width: 18rem;
+        width: 14rem;
         height: 4rem;
         margin: 0.5rem auto;
     }
